# finger_pos

./: .gitignore  .gitmodules  CMakeConfig.txt  CMakeLists.txt  README.md
cmake/: BuildExamples.cmake  CMakeFunctions.cmake  ColorLogs.cmake  Config.cmake.in  ConnectionTest.cmake  InstallingGeneral.cmake  Packing.cmake  PullingLibs.cmake  PythonWrapper.cmake
src/: finger_pos.cpp  main.cpp
